Updated index.html and created style.css and script.js files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Single-page design portfolio</title>
 </head>
 <body>
@@ -40,6 +40,6 @@
   Free Consultation
 
   Free Consultation
-
+  <script src="script.js"></script>
 </body>
 </html>
