Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="#" class="btn btn-header">Free Consultation</a>
     </header>
 
-    <section>
+    <section class="hero">
       <h1>Design solutions made easy</h1>
       <p>With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.</p>
     </section>
@@ -59,7 +59,7 @@
     </section>
 
     <section class="profile">
-      <img src="./assets/image-amy.webp" alt="Amy">
+      <img src="./assets/image-amy.webp" alt="Amy" class="amy-image">
       <article class="profile-info">
         <h2>I’m Amy, and I’d love to work on your next project</h2>
         <p>I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
