--- a/index.html
+++ b/index.html
@@ -11,107 +11,114 @@
 <body>
   <main>
     <header>
-      <a href="#"><img src="./assets/logo.svg" alt="logo"></a>
+      <a href="#"><img src="./assets/logo.svg" alt="website logo"></a>
       <a href="#" class="btn btn-header">Free Consultation</a>
     </header>
-
+  
     <section class="hero">
       <h1>Design solutions made easy</h1>
-      <p>With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.</p>
+  
+      <p>
+        With over ten years of experience in various design disciplines, I'm your one-stop shop for your design needs.
+      </p>
     </section>
-
+  
     <section class="skills">
       <article class="upper-skills">
-        <article class="skill skill-one">
-          <img src="./assets/pattern-graphic-design.svg" alt="graphic design">
-          <h2>Graphic Design</h2>
-        </article>
+      <article class="skill skill-one">
+        <img src="./assets/pattern-graphic-design.svg" alt="">
+        <h2 class="title">Graphic Design</h2>
       </article>
-
-      <article class="inner-skills">
-        <article class="skill skill-two">
-          <img src="./assets/pattern-ui-ux.svg" alt="ui/ux design">
-          <h2>UI/UX</h2>
+  
+      <article>
+        <article class="inner-skills">
+          <article class="skill skill-two">
+            <img src="./assets/pattern-ui-ux.svg" alt="">
+            <h2 class="title">UI/UX</h2>
+          </article>
+      
+          <article class="skill skill-three">
+            <img src="./assets/pattern-apps.svg" alt="">
+            <h2 class="title">Apps</h2>
+          </article>
         </article>
-
-        <article class="skill skill-three">
-          <img src="./assets/pattern-apps.svg" alt="apps design">
-          <h2>Apps</h2>
-        </article>
-
+  
         <article class="skill skill-four">
-          <img src="./assets/pattern-illustrations.svg" alt="illustrations design">
-          <h2>Illustrations</h2>
+          <img src="./assets/pattern-illustrations.svg" alt="">
+          <h2 class="title">Illustrations</h2>
         </article>
       </article>
-
+      </article>
+  
       <article class="lower-skills">
         <article class="skill skill-five">
-          <img src="./assets/pattern-photography.svg" alt="photography design">
-          <h2>Photography</h2>
+          <img src="./assets/pattern-photography.svg" alt="">
+          <h2 class="title">Photography</h2>
         </article>
-
+  
         <article class="skill skill-six">
-          <img src="./assets/pattern-motion-graphics.svg" alt="motion graphics design">
-          <h2>Motion Graphics</h2>
+          <img src="./assets/pattern-motion-graphics.svg" alt="">
+          <h2 class="title">Motion Graphics</h2>
         </article>
       </article>
     </section>
-
+  
     <section class="profile">
-      <img src="./assets/image-amy.webp" alt="Amy" class="amy-image">
+      <img src="./assets/image-amy.webp" alt="Amy upper body" class="amy-image">
       <article class="profile-info">
-        <h2>I’m Amy, and I’d love to work on your next project</h2>
-        <p>I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-          to complete mobile apps. I’m also handy with a camera!</p>
-          <a href="#" class="btn btn-profile">Free Consultation</a>
+        <h2>I'm Amy, and I'd love to work on your next project</h2>
+        <p>
+          I love working with others to create beautiful design solutions. I've designed everything from brand illustrations 
+          to complete mobile apps. I'm also handy with a camera!
+        </p>
+        <a href="#" class="btn btn-profile">Free Consultation</a>
       </article>
     </section>
-
+  
     <section class="work">
       <h3>My Work</h3>
+  
       <div class="carousel">
         <div class="carousel-item carousel-item-visible">
-          <img src="./assets/image-slide-1.jpg" alt="">
+            <img src="./assets/image-slide-1.jpg">
         </div>
-
-        <div class="carousel-item carousel-item-visible">
-          <img src="./assets/image-slide-2.jpg" alt="">
+        <div class="carousel-item">
+            <img src="./assets/image-slide-2.jpg">
         </div>
-
-        <div class="carousel-item carousel-item-visible">
-          <img src="./assets/image-slide-3.jpg" alt="">
+        <div class="carousel-item">
+            <img src="./assets/image-slide-3.jpg">
         </div>
-
-        <div class="carousel-item carousel-item-visible">
-          <img src="./assets/image-slide-4.jpg" alt="">
+        <div class="carousel-item">
+          <img src="./assets/image-slide-4.jpg">
         </div>
-
-        <div class="carousel-item carousel-item-visible">
-          <img src="./assets/image-slide-5.jpg" alt="">
+        <div class="carousel-item">
+          <img src="./assets/image-slide-5.jpg">
         </div>
-
+        
         <div>
-          <img src="./assets/icon-arrow-left.svg" alt="left arrow" class="arrow" id="carousel-button-prev">
-          <img src="./assets/icon-arrow-right.svg" alt="right arrow" class="arrow" id="carousel-button-next">
+          <img src="./assets/icon-arrow-left.svg" alt="" class='arrow' id="carousel-button-prev">
+          <img src="./assets/icon-arrow-right.svg" alt="" class='arrow' id="carousel-button-next">
         </div>
       </div>
     </section>
-
+  
     <section class="contact">
       <article class="contact-text">
-        <h2>Book a call with me</h2>
-        <p>I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-          free consultation. Then we can move forward from there.</p>
+        <h3>Book a call with me</h3>
+        <p>
+          I'd love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
+          free consultation. Then we can move forward from there.
+        </p>
       </article>
       <a href="#" class="btn btn-contact">Free Consultation</a>
     </section>
-
+  
     <footer>
-      <a href="#"><img src="./assets/logo.svg" alt="logo"></a>
+      <a href="#"><img src="./assets/logo.svg" alt="website logo"></a>
       <a href="#" class="btn btn-footer">Free Consultation</a>
     </footer>
   </main>
+
    <script src="script.js"></script>
 </body>
 </html>
